fixing border-image on Safari

--- a/geometrical-design/main.css
+++ b/geometrical-design/main.css
@@ -44,8 +44,15 @@ a {
 }
 a.btn-main {
   padding: 16px;
-  border: 4px solid transparent;
+  border-width: 4px;
+  border-style: solid;
   border-image: linear-gradient(to right, #FF0000, #0000FF, #008000) 1;
+  -moz-border-image: linear-gradient(to right, #FF0000, #0000FF, #008000) 1;
+  /* Old firefox */
+  -webkit-border-image: -webkit-linear-gradient(to right, #FF0000, #0000FF, #008000) 1;
+  /* Safari */
+  -o-border-image: linear-gradient(to right, #FF0000, #0000FF, #008000) 1;
+  /* Opera */
   margin: 20px 0px;
   display: inline-block;
   transition: all 0.3s ease;
